k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-backend
  namespace: backend
  labels:
    app: saas-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saas-backend
  template:
    metadata:
      labels:
        app: saas-backend
    spec:
      containers:
        - name: saas-backend
          image: yomnagharssellaoui/saas-backend:IMAGE_TAG
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
