k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-frontend
  namespace: frontend
  labels:
    app: saas-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saas-frontend
  template:
    metadata:
      labels:
        app: saas-frontend
    spec:
      containers:
        - name: saas-frontend
          image: yomnagharssellaoui03/saas-frontend:IMAGE_TAG
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
